use jpa for security service

--- a/security-sso-auth-server/src/main/resources/application.properties
+++ b/security-sso-auth-server/src/main/resources/application.properties
@@ -5,11 +5,18 @@ server.hostname=${COMPUTERNAME}
 # Read more on https://spring.io/guides/tutorials/spring-boot-oauth2/#_social_login_authserver
 server.servlet.context-path=/sso
 
+security.authorization.clientUser=acme
+security.authorization.clientPassword=acmesecret
+security.authorization.signingKey=A&'/}Z57M(2hNg=;LE?~]YtRMS5(yZ<vcZTA3N-($>2j:ZeX-BGftaVk`)jKP~q?,jk)EMbgt*kW'(
+
+
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:hsqldb:file:./security-sso-auth-server/target/db/testdb
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
+spring.jpa.hibernate.ddl-auto=validate
 
 server.ssl.client-auth=none
