--- a/security-sso-component/src/main/resources/application-security.properties
+++ b/security-sso-component/src/main/resources/application-security.properties
@@ -10,7 +10,7 @@ zuul.routes.user.url=${security.server.url}/user
 
 # Security
 security.server.url=${security.server.protocol}://${security.server.hostname}:${security.server.port}/sso
-security.server.jwtSigningKey=123
+security.server.jwtSigningKey=A&'/}Z57M(2hNg=;LE?~]YtRMS5(yZ<vcZTA3N-($>2j:ZeX-BGftaVk`)jKP~q?,jk)EMbgt*kW'(
 security.oauth2.client.accessTokenUri=${security.server.url}/oauth/token
 security.oauth2.client.userAuthorizationUri=${security.server.url}/oauth/authorize
 security.oauth2.client.clientId=${security.server.user}
