--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -31,6 +31,7 @@ eureka.client.healthcheck.enabled=true
 
 zuul.host.connect-timeout-millis=${request.timeout:86400000}
 zuul.host.socket-timeout-millis=${request.timeout:86400000}
+zuul.retryable=true
 
 hystrix.command.default.execution.timeout.enabled=false
 
@@ -38,7 +39,7 @@ ribbon.IsSecure=${eureka.instance.securePortEnabled}
 ribbon.ConnectTimeout=${request.timeout:86400000}
 ribbon.ReadTimeout=${request.timeout:86400000}
 
-ribbon.MaxAutoRetries=1
+ribbon.MaxAutoRetries=0
 ribbon.MaxAutoRetriesNextServer=3
 ribbon.retryableStatusCodes=500,502
 ribbon.retryEnabled=true
