rename resource-gateway-service in application.properties

--- a/resource-gateway-service/src/main/resources/application.properties
+++ b/resource-gateway-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.hostname=${COMPUTERNAME}
 server.port=9025
-spring.application.name=gateway-service
+spring.application.name=resource-gateway-service
 
 swagger.proxy=true
 info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
