add bookmark tests, refactor code and configuration

--- a/ssl-component/src/main/resources/application-serverSsl.properties
+++ b/ssl-component/src/main/resources/application-serverSsl.properties
@@ -1,5 +1,6 @@
 server.protocol=https
 
+# server.ssl.enabled is used by eureka service; it is an interoperability mechanism between the 2 components while also allowing them to independently be disabled
 server.ssl.enabled=${ssl.enabled:true}
 server.ssl.key-alias=desktop-1gn7l5l
 server.ssl.key-store=classpath:computername-identity.jks
