--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ro.rasel</groupId>
+        <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>dependency-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>commons</artifactId>
