--- a/eureka-client-component/pom.xml
+++ b/eureka-client-component/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ro.rasel</groupId>
+        <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>dependency-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>eureka-client-component</artifactId>
@@ -18,11 +18,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        
+
         <!--Spring Cloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
