--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ro.rasel</groupId>
+        <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>starter-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>eureka-service</artifactId>
@@ -18,19 +18,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>security-sso-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>ssl-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>eureka-client-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--Spring Cloud-->
