--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ro.rasel</groupId>
+        <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>starter-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>security-sso-auth-server</artifactId>
@@ -20,9 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>ssl-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--Spring Boot-->
