--- a/starter-parent/pom.xml
+++ b/starter-parent/pom.xml
@@ -9,9 +9,9 @@
         <version>2.1.6.RELEASE</version>
     </parent>
 
-    <groupId>ro.rasel</groupId>
+    <groupId>ro.rasel.spring.microservices</groupId>
     <artifactId>starter-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -21,9 +21,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>ro.rasel</groupId>
+                <groupId>ro.rasel.spring.microservices</groupId>
                 <artifactId>dependency-parent</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>0.0.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
