--- a/swagger-component/pom.xml
+++ b/swagger-component/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ro.rasel</groupId>
+        <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>dependency-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>swagger-component</artifactId>
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>ro.rasel</groupId>
+            <groupId>ro.rasel.spring.microservices</groupId>
             <artifactId>eureka-client-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--Spring Boot-->
