add travis config

--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=9023
 spring.application.name=client-service
 
