--- a/contact-service/src/main/resources/application.properties
+++ b/contact-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=8083
 spring.application.name=contact-service
 
