--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=9024
 spring.application.name=gateway-service
 
