--- a/resource-gateway-service/src/main/resources/application.properties
+++ b/resource-gateway-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=9025
 spring.application.name=resource-gateway-service
 
