--- a/bookmark-service/src/main/resources/application.properties
+++ b/bookmark-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=8082
 spring.application.name=bookmark-service
 
