--- a/passport-service/src/main/resources/application.properties
+++ b/passport-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME}
+server.hostname=${COMPUTERNAME:${hostname}}
 server.port=8084
 spring.application.name=passport-service
 
