--- a/passport-service/src/main/resources/application.properties
+++ b/passport-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.hostname=${COMPUTERNAME:${hostname}}
+server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=8084
 spring.application.name=passport-service
 
