security configuration for resource servers

--- a/components/ssl-component/pom.xml
+++ b/components/ssl-component/pom.xml
@@ -83,14 +83,13 @@
                                                 execute "cmd /c del computername-identity.jks"
                                                 execute "cmd /c del localhost.cer"
                                                 execute "cmd /c del computername.cer"
-                                                execute "cmd /c del localhost.jks"
                                                 execute "cmd /c del truststore.jks"
 
-                                                // execute "cmd /c keytool -genkey -alias localhost -keyalg RSA -keystore localhost-identity.jks -deststoretype JKS -validity 1825 -keypass jkspass -storepass jkspass -dname \"CN=localhost, OU=N/A, O=N/A, L=Bucharest, ST=Romania, C=RO correct?\""
+                                                execute "cmd /c keytool -genkey -alias localhost -keyalg RSA -keystore localhost-identity.jks -deststoretype JKS -validity 1825 -keypass jkspass -storepass jkspass -dname \"CN=localhost, OU=N/A, O=N/A, L=Bucharest, ST=Romania, C=RO correct?\""
                                                 execute "cmd /c keytool -genkey -alias desktop-1gn7l5l -keyalg RSA -keystore computername-identity.jks -deststoretype JKS -validity 1825 -keypass jkspass -storepass jkspass -dname \"CN=%COMPUTERNAME%, OU=N/A, O=N/A, L=Bucharest, ST=Romania, C=RO correct?\""
-                                                // execute "cmd /c keytool -export -alias localhost -keystore localhost-identity.jks -file localhost.cer -storepass jkspass"
+                                                execute "cmd /c keytool -export -alias localhost -keystore localhost-identity.jks -file localhost.cer -storepass jkspass"
                                                 execute "cmd /c keytool -export -alias desktop-1gn7l5l -keystore computername-identity.jks -file computername.cer -storepass jkspass"
-                                                // execute "cmd /c keytool -importcert -keystore identity.jks -alias localhost -storepass jkspass -file localhost.cer -noprompt"
+                                                execute "cmd /c keytool -importcert -keystore truststore.jks -alias localhost -storepass jkspass -file localhost.cer -noprompt"
                                                 execute "cmd /c keytool -importcert -keystore truststore.jks -alias desktop-1gn7l5l -storepass jkspass -file computername.cer -noprompt"
                                             ]]>
                                         </script>
