--- a/services/client-service/pom.xml
+++ b/services/client-service/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
 
         <!--Spring Cloud-->
         <!--Server is used to be able to render eureka UI-->
