--- a/services/passport-service/pom.xml
+++ b/services/passport-service/pom.xml
@@ -93,6 +93,7 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                        <!--suppress MavenModelInspection -->
                         <configuration>
                             <inputSpec>${project.basedir}/swagger/bookmark-service-swagger.json</inputSpec>
                             <apiPackage>ro.rasel.spring.microserivces.api.bookmark</apiPackage>
@@ -104,6 +105,7 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                        <!--suppress MavenModelInspection -->
                         <configuration>
                             <inputSpec>${project.basedir}/swagger/contact-service-swagger.json</inputSpec>
                             <apiPackage>ro.rasel.spring.microserivces.api.contact</apiPackage>
@@ -111,6 +113,7 @@
                         </configuration>
                     </execution>
                 </executions>
+                <!--suppress MavenModelInspection -->
                 <configuration>
                     <language>spring</language>
                     <library>spring-cloud</library>
