--- a/components/ssl-component/pom.xml
+++ b/components/ssl-component/pom.xml
@@ -7,7 +7,7 @@
         <groupId>ro.rasel.spring.microservices</groupId>
         <artifactId>dependency-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../parents/dependency-parent</relativePath>
+        <relativePath>../../parents/dependency-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>ro.rasel.spring.microservices.components</groupId>
