hystrix hook for authorisation forwarding

--- a/components/sso-client-component/pom.xml
+++ b/components/sso-client-component/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>commons</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.commons</groupId>
+            <artifactId>spring-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
