--- a/services/bookmark-service/pom.xml
+++ b/services/bookmark-service/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>swagger-component</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>zipkin-component</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
