--- a/services/gateway-service/pom.xml
+++ b/services/gateway-service/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>ssl-component</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>zipkin-component</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
