--- a/services/passport-service/pom.xml
+++ b/services/passport-service/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>swagger-component</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>zipkin-component</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
