--- a/services/resource-gateway-service/pom.xml
+++ b/services/resource-gateway-service/pom.xml
@@ -36,7 +36,12 @@
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>ssl-component</artifactId>
-             <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>zipkin-component</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--Spring Boot-->
