add spring cloud config

--- a/components/sso-client-component/src/main/resources/application-security.properties
+++ b/components/sso-client-component/src/main/resources/application-security.properties
@@ -2,8 +2,8 @@
 security.server.protocol=${server.protocol:http}
 security.server.hostname=${server.hostname}
 security.server.port=9999
-security.server.user=acme
-security.server.password=acmesecret
+security.server.user=none
+security.server.password=none
 
 zuul.routes.user.path=/user/**
 zuul.routes.user.url=${security.server.url}/user
