--- a/services/client-service/src/main/resources/application.properties
+++ b/services/client-service/src/main/resources/application.properties
@@ -2,6 +2,12 @@ server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=9023
 spring.application.name=client-service
 
+security.server.user=acme
+security.server.password=acmesecret
+
+registry.server.user=eureka
+registry.server.password=eurekasecret
+
 swagger.proxy=true
 info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
 
