--- a/services/eureka-service/src/main/resources/local/application.properties
+++ b/services/eureka-service/src/main/resources/local/application.properties
@@ -2,8 +2,15 @@ server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=8761
 spring.application.name=eureka-service
 
-eureka.user=eureka
-eureka.password=eurekasecret
+security.server.user=acme
+security.server.password=acmesecret
+
+registry.server.user=eureka
+registry.server.password=eurekasecret
+
+security.basic.user=${registry.server.user}
+security.basic.password=${registry.server.password}
+security.basic.url-ant-matcher=/eureka/**
 
 eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=false
