--- a/services/gateway-service/src/main/resources/local/application.properties
+++ b/services/gateway-service/src/main/resources/local/application.properties
@@ -1,6 +1,12 @@
 server.hostname=${COMPUTERNAME:${hostname:localhost}}
-server.port=9025
-spring.application.name=resource-gateway-service
+server.port=9024
+spring.application.name=gateway-service
+
+security.server.user=acme
+security.server.password=acmesecret
+
+registry.server.user=eureka
+registry.server.password=eurekasecret
 
 swagger.proxy=true
 info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
