--- a/services/hystrix-dashboard-service/src/main/resources/application.properties
+++ b/services/hystrix-dashboard-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=9903
 server.hostname=${COMPUTERNAME:${hostname:localhost}}
 
+security.server.user=acme
+security.server.password=acmesecret
+
 server.ssl.client-auth=none
