--- a/services/passport-service/pom.xml
+++ b/services/passport-service/pom.xml
@@ -5,9 +5,9 @@
 
     <parent>
         <groupId>ro.rasel.spring.microservices</groupId>
-        <artifactId>starter-parent</artifactId>
+        <artifactId>service-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../parents/starter-parent/pom.xml</relativePath>
+        <relativePath>../../parents/service-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>passport-service</artifactId>
@@ -23,32 +23,26 @@
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>sso-client-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>eureka-client-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>hystrix-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>ssl-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>swagger-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>zipkin-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--Spring Boot-->
