--- a/services/passport-service/src/main/resources/local/application.properties
+++ b/services/passport-service/src/main/resources/local/application.properties
@@ -2,4 +2,10 @@ server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=8084
 spring.application.name=passport-service
 
+security.server.user=acme
+security.server.password=acmesecret
+
+registry.server.user=eureka
+registry.server.password=eurekasecret
+
 management.endpoints.web.exposure.include=*
