--- a/services/sso-ui-test-service/src/main/resources/application.properties
+++ b/services/sso-ui-test-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=8081
 spring.application.name=sso-ui-test-service
+
+security.server.user=acme
+security.server.password=acmesecret
