--- a/components/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/components/eureka-client-component/src/main/resources/application-eureka.properties
@@ -2,8 +2,6 @@
 registry.server.protocol=${eureka.instance.protocol}
 registry.server.hostname=${eureka.instance.hostname}
 registry.server.port=8761
-registry.server.user=eureka
-registry.server.password=eurekasecret
 
 # all interval properties below may require to be adjusted for performance
 eureka.client.registry-fetch-interval-seconds=10
@@ -26,7 +24,7 @@ eureka.instance.healthCheckUrl=${eureka.instance.url}/health
 eureka.instance.homePageUrl=${eureka.instance.url}/
 #eureka.instance.instanceId=${server.hostname}:${spring.application.name}:${server.port}
 
-eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:eureka}:${registry.server.password:eurekasecret}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
+eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:none}:${registry.server.password:none"}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
 eureka.client.healthcheck.enabled=true
 
 zuul.host.connect-timeout-millis=${request.timeout:86400000}
