--- a/postman-collections/package.json
+++ b/postman-collections/package.json
@@ -9,8 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "newman run \"Spring Microservices.postman_collection.json\" -e localhost.postman_environment.json -k --disable-unicode"
+    "test": "newman run \"Spring Microservices.postman_collection.json\" -e localhost.postman_environment.json -k --disable-unicode"
   },
   "author": "",
   "license": "ISC"
