--- a/services/contact-service/src/main/resources/local/application.properties
+++ b/services/contact-service/src/main/resources/local/application.properties
@@ -2,6 +2,12 @@ server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.port=8083
 spring.application.name=contact-service
 
+security.server.user=acme
+security.server.password=acmesecret
+
+registry.server.user=eureka
+registry.server.password=eurekasecret
+
 management.endpoints.web.exposure.include=*
 
 spring.jpa.generate-ddl=true
