set all readme files in md format

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <!--Parents-->
         <module>parents/starter-parent</module>
+        <module>parents/service-parent</module>
         <module>parents/dependency-parent</module>
         <!--Commons-->
         <module>commons/commons</module>
