--- a/services/gateway-service/src/main/resources/local/application.properties
+++ b/services/gateway-service/src/main/resources/local/application.properties
@@ -9,7 +9,7 @@ registry.server.user=eureka
 registry.server.password=eurekasecret
 
 swagger.proxy=true
-info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
+info.swaggerUrl=${server.protocol:http}://${server.hostname}:${server.port}/swagger-ui.html
 
 zuul.sensitive-headers=Cookie,Set-Cookie
 
