add gatling testing

--- a/commons/spring-commons/src/main/resources/application-common.properties
+++ b/commons/spring-commons/src/main/resources/application-common.properties
@@ -1,1 +1,5 @@
 spring.application.tempDir=${java.io.tmpdir}/${spring.application.group:spring}/${spring.application.name}
+
+#server.ssl.enabled=false
+#client.ssl.enabled=false
+#security.enabled=false
