--- a/services/client-service/src/main/resources/application.properties
+++ b/services/client-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ zuul.sensitive-headers=Cookie,Set-Cookie
 management.endpoints.web.exposure.include=*
 
 server.ssl.client-auth=none
+
+spring.profiles.include=common
