--- a/services/eureka-service/src/main/resources/local/application.properties
+++ b/services/eureka-service/src/main/resources/local/application.properties
@@ -17,3 +17,5 @@ eureka.server.enable-self-preservation=false
 eureka.server.responseCacheAutoExpirationInSeconds=10
 
 server.ssl.client-auth=none
+
+spring.profiles.include=common
