--- a/services/sso-auth-service/src/main/resources/local/application.properties
+++ b/services/sso-auth-service/src/main/resources/local/application.properties
@@ -20,3 +20,5 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.jpa.hibernate.ddl-auto=validate
 
 server.ssl.client-auth=none
+
+spring.profiles.include=common
