--- a/services/sso-ui-test-service/src/main/resources/application.properties
+++ b/services/sso-ui-test-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=sso-ui-test-service
 
 security.server.user=acme
 security.server.password=acmesecret
+
+spring.profiles.include=common
