--- a/services/bookmark-service/src/main/resources/local/application.properties
+++ b/services/bookmark-service/src/main/resources/local/application.properties
@@ -11,3 +11,5 @@ registry.server.password=eurekasecret
 management.endpoints.web.exposure.include=*
 
 spring.jpa.generate-ddl=true
+
+spring.profiles.include=common
