--- a/services/passport-service/src/main/resources/local/application.properties
+++ b/services/passport-service/src/main/resources/local/application.properties
@@ -9,3 +9,5 @@ registry.server.user=eureka
 registry.server.password=eurekasecret
 
 management.endpoints.web.exposure.include=*
+
+spring.profiles.include=common
