--- a/services/passport-service/pom.xml
+++ b/services/passport-service/pom.xml
@@ -76,7 +76,7 @@
                 <configuration>
                     <apiSources>
                         <apiSource>
-                            <locations>ro.rasel.service.passport.controller</locations>
+                            <locations>ro.rasel.spring.microservices.passportservice.controller</locations>
                             <schemes>https</schemes>
                         </apiSource>
                     </apiSources>
