--- a/application/bookmark-service/src/main/resources/local/application.properties
+++ b/application/bookmark-service/src/main/resources/local/application.properties
@@ -11,5 +11,11 @@ registry.server.password=eurekasecret
 management.endpoints.web.exposure.include=*
 
 spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:hsqldb:file:./application/bookmark-service/target/db/testdb
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
+spring.jpa.hibernate.ddl-auto=create
 
 spring.profiles.include=common
