--- a/components/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/components/eureka-client-component/src/main/resources/application-eureka.properties
@@ -21,7 +21,7 @@ eureka.instance.securePort=${eureka.instance.port:8761}
 eureka.instance.secureVirtualHostName=${spring.application.name}
 eureka.instance.statusPageUrl=${eureka.instance.url}/info
 eureka.instance.healthCheckUrl=${eureka.instance.url}/health
-eureka.instance.homePageUrl=${eureka.instance.url}/
+eureka.instance.homePageUrl=${eureka.instance.url}
 #eureka.instance.instanceId=${server.hostname}:${spring.application.name}:${server.port}
 
 eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:none}:${registry.server.password:none"}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
