--- a/parents/starter-parent/pom.xml
+++ b/parents/starter-parent/pom.xml
@@ -19,6 +19,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!--Plugins-->
+        <gmavenplus-plugin.version>1.7.1</gmavenplus-plugin.version>
+        <groovy-all.version>2.4.17</groovy-all.version>
+        <dependency-check-maven.version>5.0.0</dependency-check-maven.version>
+        <swagger-maven-plugin.version>3.1.7</swagger-maven-plugin.version>
+        <swagger-codegen-maven-plugin.version>2.4.5</swagger-codegen-maven-plugin.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -38,7 +45,7 @@
                 <plugin>
                     <groupId>org.codehaus.gmavenplus</groupId>
                     <artifactId>gmavenplus-plugin</artifactId>
-                    <version>1.5</version>
+                    <version>${gmavenplus-plugin.version}</version>
                     <configuration>
                         <properties>
                             <workingDir>${project.basedir}</workingDir>
@@ -48,7 +55,7 @@
                         <dependency>
                             <groupId>org.codehaus.groovy</groupId>
                             <artifactId>groovy-all</artifactId>
-                            <version>2.4.3</version>
+                            <version>${groovy-all.version}</version>
                             <scope>runtime</scope>
                         </dependency>
                     </dependencies>
@@ -56,7 +63,7 @@
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
-                    <version>5.0.0</version>
+                    <version>${dependency-check-maven.version}</version>
                     <configuration>
                         <versionCheckEnabled>true</versionCheckEnabled>
                     </configuration>
@@ -71,7 +78,7 @@
                 <plugin>
                     <groupId>com.github.kongchen</groupId>
                     <artifactId>swagger-maven-plugin</artifactId>
-                    <version>3.1.6</version>
+                    <version>${swagger-maven-plugin.version}</version>
                     <executions>
                         <execution>
                             <phase>compile</phase>
@@ -98,7 +105,7 @@
                 <plugin>
                     <groupId>io.swagger</groupId>
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>2.4.5</version>
+                    <version>${swagger-codegen-maven-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
